tests/paczka1/fuzzy1/61831564.err
Error in line 20: LqaDIi8y S902 74,0
Error in line 26: LqaDIi8y S896 476,7
